--- a/front-end/src/pages/Register/styles/Register.css
+++ b/front-end/src/pages/Register/styles/Register.css
@@ -10,7 +10,7 @@
   }
 }
 
-._page_login {
+._page_register {
   align-items: center;
   background-color: var(--primary-color);
   display: flex;
@@ -19,19 +19,19 @@
   min-width: 100vw;
 }
 
-._page_login ._logo {
+._page_register ._logo {
   width: 70px;
   margin: 20px;
 }
 
-._page_login ._login_form {
+._page_register ._register_form {
   align-items: center;
   background-color: white;
   border-radius: 0.5em;
   box-shadow: 0 0 5px rgb(193, 193, 193);
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
   justify-content: space-evenly;
   min-height: 400px;
   min-width: 400px;
@@ -39,7 +39,7 @@
   animation: toTop 1s;
 }
 
-._page_login ._inputs_area {
+._page_register ._inputs_area {
   width: 100%;
   max-width: 250px;
   display: flex;
@@ -48,7 +48,7 @@
   padding: 20px 0;
 }
 
-._page_login ._login_form label {
+._page_register ._register_form label {
   display: flex;
   flex-direction: column;
   font-size: 0.8em;
@@ -56,7 +56,7 @@
   width: 100%;
 }
 
-._page_login ._login_form input {
+._page_register ._register_form input {
   border: none;
   border-bottom: 2px solid var(--primary-color);
   outline: none;
@@ -64,7 +64,13 @@
   width: 100%;
 }
 
-._page_login ._btn_login {
+._page_register ._error_message {
+  color: var(--primary-color);
+  font-size: 0.8em;
+  text-shadow: 0 0 1px var(--secondary-color);
+}
+
+._page_register ._btn_login {
   padding: 10px 20px;
   border: none;
   border-radius: 25px;
@@ -74,37 +80,31 @@
   transition: 0.5s;
 }
 
-._page_login ._btn_login:hover {
+._page_register ._btn_login:hover {
   background-color: var(--secondary-color);
 }
 
-._page_login ._btn_login:disabled {
+._page_register ._btn_login:disabled {
   background-color: rgb(68, 68, 68);
   opacity: 0.2;
   cursor: not-allowed;
 }
 
-._page_login ._btn_register {
+._page_register ._btn_register {
   font-size: 0.8em;
   display: flex;
   gap: 5px;
   padding: 20px;
 }
 
-._page_login ._error_message {
-  color: var(--primary-color);
-  font-size: 0.8em;
-  text-shadow: 0 0 1px var(--secondary-color);
-}
-
-._page_login ._btn_register button {
+._page_register ._btn_register button {
   background: none;
   border: none;
   color: var(--primary-color);
   cursor: pointer;
 }
 
-._page_login ._btn_register button:hover {
+._page_register ._btn_register button:hover {
   text-decoration: underline;
   color: var(--secondary-color);
 } */
