--- a/front-end/src/components/ProductCard/styles/ProductCard.css
+++ b/front-end/src/components/ProductCard/styles/ProductCard.css
@@ -1,3 +1,94 @@
+@keyframes toTop {
+  
+  0% {
+    opacity: 0%;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 100%;
+    transform: translateY(0);
+  }
+}
+
+._product_card {
+  background-color: var(--contrast-color-1);
+  padding: 0 0 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  box-shadow: 0 0 5px rgb(228, 228, 228);
+  animation: toTop 1s;
+}
+
+._product_card ._product_details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+  align-items: flex-start;
+}
+
+._product_card ._product_details p {
+  color: var(--primary-color);
+  font-weight: 600;
+  width: 180px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+._product_card ._product_details ._price {
+  color: rgb(68, 68, 68);
+}
+
 ._image_product_cart {
-  width: 100px;
+  height: 150px;
+  width: 100%;
+  object-fit: contain;
+  background-color: white;
+  padding: 10px;
+}
+
+._product_card ._price_control {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  gap: 5px;
+  margin-top: 10px;
+}
+
+._product_card ._price_control input {
+  width: 50px;
+  text-align: center;
+  border: none;
+  border-radius: 25px;
+  outline: none;
+  padding: 5px;
+}
+
+._product_card ._price_control
+input::-webkit-outer-spin-button,
+._product_card ._price_control
+input::-webkit-inner-spin-button {
+  appearance: none;
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+._product_card ._price_control button {
+  height: 30px;
+  width: 30px;
+  border: none;
+  color: var(--primary-color);
+  cursor: pointer;
+  font-weight: 800;
+  font-size: 1.3em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+._product_card ._price_control button:hover {
+  color: var(--secondary-color);
 }
