--- a/front-end/src/pages/Login/styles/Login.css
+++ b/front-end/src/pages/Login/styles/Login.css
@@ -21,6 +21,8 @@
 ._page_login ._logo {
   margin: 20px;
   width: 70px;
+  color: var(--primary-color);
+  font-size: 3.5em;
 }
 
 ._page_login ._login_form {
@@ -56,8 +58,8 @@
 }
 
 ._page_login ._login_form input {
+  border: 0;
   border-bottom: 2px solid var(--primary-color);
-  border: none;
   outline: none;
   padding: 5px;
   width: 100%;
@@ -65,8 +67,8 @@
 
 ._page_login ._btn_login {
   background-color: var(--primary-color);
-  border-radius: 25px;
   border: none;
+  border-radius: 0.5em;
   color:  white;
   cursor: pointer;
   padding: 10px 20px;
