--- a/front-end/src/components/AdminUsersTable/styles/AdminUsersTable.css
+++ b/front-end/src/components/AdminUsersTable/styles/AdminUsersTable.css
@@ -11,27 +11,27 @@
 }
 
 ._admin_users_table {
-  width: 60%;
-  max-width: 800px;
-  height: 100%;
-  border-collapse: collapse;
   animation: toLeft 1s;
+  border-collapse: collapse;
+  height: 100%;
+  max-width: 800px;
+  width: 60%;
 }
 
 ._admin_users_table th {
   background-color: var(--primary-color);
-  padding: 10px;
-  font-weight: 100;
   color: white;
   font-size: 0.8em;
+  font-weight: 100;
+  padding: 10px;
 }
 
 ._admin_users_table th:first-child {
-  border-radius: 0.5em 0 0 0;
+  border-top-left-radius: 0.5em;
 }
 
 ._admin_users_table th:last-child {
-  border-radius: 0 0.5em 0 0;
+  border-top-right-radius: 0.5em;
 }
 
 ._admin_users_table ._email {
