--- a/front-end/src/pages/Register/styles/Register.css
+++ b/front-end/src/pages/Register/styles/Register.css
@@ -20,17 +20,18 @@
 }
 
 ._page_register ._logo {
-  margin: 20px;
-  width: 70px;
   color: var(--primary-color);
   font-size: 3.5em;
+  margin: 20px;
+  width: 70px;
 }
 
 ._page_register ._register_form {
   align-items: center;
+  animation: toTop 1s;
   background-color: white;
   border-radius: 0.5em;
-  box-shadow: 0 0 5px rgb(193, 193, 193);
+  box-shadow: 0 0 5px #c1c1c1;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -38,16 +39,15 @@
   min-height: 400px;
   min-width: 400px;
   padding: 20px;
-  animation: toTop 1s;
 }
 
 ._page_register ._inputs_area {
-  width: 100%;
-  max-width: 250px;
   display: flex;
-  gap: 10px;
   flex-direction: column;
+  gap: 10px;
+  max-width: 250px;
   padding: 20px 0;
+  width: 100%;
 }
 
 ._page_register ._register_form label {
@@ -73,12 +73,12 @@
 }
 
 ._page_register ._btn_login {
-  padding: 10px 20px;
   border: none;
   border-radius: 0.5em;
   background-color: var(--primary-color);
   color:  white;
   cursor: pointer;
+  padding: 10px 20px;
   transition: 0.5s;
 }
 
@@ -87,7 +87,7 @@
 }
 
 ._page_register ._btn_login:disabled {
-  background-color: rgb(68, 68, 68);
+  background-color: #444;
   opacity: 0.2;
   cursor: not-allowed;
 }
@@ -107,6 +107,6 @@
 }
 
 ._page_register ._btn_register button:hover {
-  text-decoration: underline;
   color: var(--secondary-color);
+  text-decoration: underline;
 }
