--- a/front-end/src/pages/Order/styles/Order.css
+++ b/front-end/src/pages/Order/styles/Order.css
@@ -40,19 +40,19 @@
   gap: 10px;
 }
 
-._page_order.pending :is(._header_order h1, ._price span:last-child) {
+._page_order.pending ._header_order h1 {
   color: var(--status-pending);
 }
 
-._page_order.preparing :is(._header_order h1, ._price span:last-child) {
+._page_order.preparing ._header_order h1 {
   color: var(--status-preparing);
 }
 
-._page_order.road :is(._header_order h1, ._price span:last-child) {
+._page_order.road ._header_order h1 {
   color: var(--status-road);
 }
 
-._page_order.received :is(._header_order h1, ._price span:last-child) {
+._page_order.received ._header_order h1 {
   color: var(--status-received);
 }
 
@@ -143,4 +143,20 @@
   font-size: 1.2em;
   font-weight: 800;
   gap: 10px;
+}
+
+._page_order.pending ._price span:last-child {
+  color: var(--status-pending);
+}
+
+._page_order.preparing ._price span:last-child {
+  color: var(--status-preparing);
+}
+
+._page_order.road ._price span:last-child {
+  color: var(--status-road);
+}
+
+._page_order.received ._price span:last-child {
+  color: var(--status-received);
 }
