--- a/front-end/src/pages/Login/styles/Login.css
+++ b/front-end/src/pages/Login/styles/Login.css
@@ -1,8 +1,10 @@
-@keyframes toTop {  
+@keyframes toTop {
+
   0% {
     opacity: 0%;
     transform: translateY(20px);
   }
+
   100% {
     opacity: 100%;
     transform: translateY(0);
@@ -19,10 +21,10 @@
 }
 
 ._page_login ._logo {
-  margin: 20px;
-  width: 70px;
   color: var(--primary-color);
   font-size: 3.5em;
+  margin: 20px;
+  width: 70px;
 }
 
 ._page_login ._login_form {
@@ -30,7 +32,7 @@
   animation: toTop 1s;
   background-color: white;
   border-radius: 0.5em;
-  box-shadow: 0 0 5px rgb(193, 193, 193);
+  box-shadow: 0 0 5px #c1c1c1;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -69,7 +71,7 @@
   background-color: var(--primary-color);
   border: none;
   border-radius: 0.5em;
-  color:  white;
+  color: white;
   cursor: pointer;
   padding: 10px 20px;
   transition: 0.5s;
@@ -80,7 +82,7 @@
 }
 
 ._page_login ._btn_login:disabled {
-  background-color: rgb(68, 68, 68);
+  background-color: #444;
   cursor: not-allowed;
   opacity: 0.2;
 }
