--- a/front-end/src/pages/Checkout/styles/Checkout.css
+++ b/front-end/src/pages/Checkout/styles/Checkout.css
@@ -3,25 +3,25 @@
 }
 
 ._page_checkout h1 {
-  padding: 40px 20px;
   color: var(--primary-color);
+  padding: 40px 20px;
 }
 
 ._page_checkout main {
   display: flex;
   flex-direction: column;
-  padding: 20px;
   gap: 20px;
+  padding: 20px;
 }
 
 ._page_checkout ._subtotal {
-  color: rgb(68, 68, 68);
+  color: #444;
 }
 
 ._page_checkout ._price {
-  text-align: end;
-  font-size: 1.2em;
   color: var(--primary-color);
-  padding: 20px;
+  font-size: 1.2em;
   font-weight: 800;
+  padding: 20px;
+  text-align: end;
 }
