--- a/front-end/src/components/OrderTableItem/styles/OrderTableItem.css
+++ b/front-end/src/components/OrderTableItem/styles/OrderTableItem.css
@@ -1,7 +1,6 @@
-
 ._order_table_item td {
-  text-align: center;
-  padding: 10px;
   border: 1px solid var(--contrast-color-1);
-  color: rgb(68, 68, 68);
+  color: #444;
+  padding: 10px;
+  text-align: center;
 }
