--- a/front-end/src/components/OrderTable/styles/OrderTable.css
+++ b/front-end/src/components/OrderTable/styles/OrderTable.css
@@ -1,9 +1,10 @@
 @keyframes toTop {
-  
+
   0% {
     opacity: 0%;
     transform: translateY(10px);
   }
+
   100% {
     opacity: 100%;
     transform: translateY(0);
@@ -11,21 +12,21 @@
 }
 
 ._order_table {
-  border-collapse: collapse;
   animation: toTop 1s;
+  border-collapse: collapse;
 }
 
 ._order_table th {
   background-color: var(--contrast-color-1);
-  padding: 10px;
+  color: #444;
   font-weight: 100;
-  color: rgb(86, 86, 86);
+  padding: 10px;
 }
 
 ._order_table th:first-child {
-  border-radius: 0.5em 0 0 0;
+  border-top-left-radius: 0.5em;
 }
 
 ._order_table th:last-child {
-  border-radius: 0 0.5em 0 0;
+  border-top-right-radius: 0.5em;
 }
