--- a/front-end/src/components/ProductCard/styles/ProductCard.css
+++ b/front-end/src/components/ProductCard/styles/ProductCard.css
@@ -68,11 +68,8 @@
   width: 50px;
 }
 
-._product_card ._price_control
-input::-webkit-outer-spin-button,
-._product_card ._price_control
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
+._product_card ._price_control input::-webkit-outer-spin-button,
+._product_card ._price_control input::-webkit-inner-spin-button {
   appearance: none;
   margin: 0;
 }
