--- a/front-end/src/components/OrderCard/styles/OrderCard.css
+++ b/front-end/src/components/OrderCard/styles/OrderCard.css
@@ -1,9 +1,10 @@
 @keyframes toTop {
-  
+
   0% {
     opacity: 0%;
     transform: translateY(25px);
   }
+
   100% {
     opacity: 100%;
     transform: translateY(0);
@@ -11,29 +12,27 @@
 }
 
 ._order_card {
-  /* padding: 10px; */
+  animation: toTop 1s;
+  background-color: var(--contrast-color-1);
+  box-shadow: 0 0 5px var(--contrast-color-2);
+  color: #444;
   display: flex;
   gap: 10px;
-  /* border-radius: 0.5em; */
-  text-decoration: none;
-  background-color: var(--contrast-color-1);
   justify-content: space-between;
-  color: rgb(86, 86, 86);
-  box-shadow: 0 0 5px var(--contrast-color-2);
-  animation: toTop 1s;
+  text-decoration: none;
 }
 
 ._order_card ._order_number {
+  align-items: center;
+  background-color: white;
+  color: #444;
+  display: flex;
+  flex-direction: column;
+  font-weight: 800;
+  justify-content: center;
   padding: 5px;
   text-align: center;
-  font-weight: 800;
   width: 100px;
-  display: flex;
-  align-items: center;
-  color: rgb(86, 86, 86);
-  background-color: white;
-  flex-direction: column;
-  justify-content: center;
 }
 
 ._order_card ._order_details, ._order {
@@ -41,9 +40,9 @@
 }
 
 ._order_card ._order_details {
-  padding: 10px;
-  gap: 10px;
   flex-direction: column;
+  gap: 10px;
+  padding: 10px;
 }
 
 ._order_card ._order {
@@ -59,14 +58,14 @@
 }
 
 ._order_card ._order_status {
-  width: 150px;
-  border-radius: 0.5em;
-  display: flex;
   align-items: center;
-  padding: 20px;
+  border-radius: 0.5em;
   color: white;
+  display: flex;
   font-weight: 800;
   gap: 5px;
+  padding: 20px;
+  width: 150px;
 }
 
 ._order_card.pending ._order_status {
@@ -88,23 +87,23 @@
 ._order_card ._date_price {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   gap: 10px;
+  justify-content: space-evenly;
   margin: 10px 10px 10px 0;
 }
 
 ._order_card ._date_price p {
   background-color: white;
-  padding: 5px;
   border-radius: 0.5em;
   font-weight: 800;
+  padding: 5px;
 }
 
 ._order_card ._order_address {
   font-size: 0.8em;
-  text-align: end;
   max-width: 280px;
-  text-overflow: ellipsis;
   overflow: hidden;
+  text-align: end;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
