--- a/front-end/src/components/CheckoutTableItem/styles/CheckoutTableItem.css
+++ b/front-end/src/components/CheckoutTableItem/styles/CheckoutTableItem.css
@@ -1,18 +1,17 @@
-
 ._checkout_table_item td {
-  text-align: center;
-  padding: 10px;
   border: 1px solid var(--contrast-color-1);
-  color: rgb(68, 68, 68);
+  color: #444;
+  padding: 10px;
+  text-align: center;
 }
 
 ._checkout_table_item ._remove {
   color: var(--primary-color);
+  background: none;
   border: none;
   border-radius: 25px;
   cursor: pointer;
   font-size: 1.3em;
-  background: none;
 }
 
 ._checkout_table_item ._remove:hover {
