--- a/front-end/src/components/AdminUsersTableItem/styles/AdminUsersTableItem.css
+++ b/front-end/src/components/AdminUsersTableItem/styles/AdminUsersTableItem.css
@@ -1,19 +1,18 @@
-
 ._admin_users_table td {
-  text-align: center;
-  padding: 10px;
   border: 1px solid var(--contrast-color-1);
-  color: rgb(68, 68, 68);
+  color: #444;
   font-size: 0.9em;
+  padding: 10px;
+  text-align: center;
 }
 
 ._admin_users_table ._remove {
-  color: var(--primary-color);
+  background: none;
   border: none;
   border-radius: 25px;
+  color: var(--primary-color);
   cursor: pointer;
   font-size: 1.2em;
-  background: none;
 }
 
 ._admin_users_table ._remove:hover {
