--- a/front-end/src/pages/Login/styles/Login.css
+++ b/front-end/src/pages/Login/styles/Login.css
@@ -1,5 +1,4 @@
 @keyframes toTop {
-
   0% {
     opacity: 0%;
     transform: translateY(20px);
@@ -16,8 +15,8 @@
   background-color: var(--primary-color);
   display: flex;
   justify-content: center;
-  min-height: 100vh;
-  min-width: 100vw;
+  height: 100vh;
+  width: 100vw;
 }
 
 ._page_login ._logo {
@@ -37,9 +36,11 @@
   flex-direction: column;
   gap: 10px;
   justify-content: space-evenly;
+  max-width: 400px;
   min-height: 400px;
-  min-width: 400px;
+  min-width: 310px;
   padding: 20px;
+  width: 90vw;
 }
 
 ._page_login ._inputs_area {
