--- a/front-end/src/pages/Checkout/styles/Checkout.css
+++ b/front-end/src/pages/Checkout/styles/Checkout.css
@@ -14,6 +14,11 @@
   padding: 20px;
 }
 
+._checkout_table_area {
+  display: flex;
+  justify-content: center;
+}
+
 ._page_checkout ._subtotal {
   color: #444;
 }
