--- a/front-end/src/components/OrderTable/styles/OrderTable.css
+++ b/front-end/src/components/OrderTable/styles/OrderTable.css
@@ -14,6 +14,9 @@
 ._order_table {
   animation: toTop 1s;
   border-collapse: collapse;
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 ._order_table th {
