--- a/front-end/src/components/AdminRegister/styles/AdminRegister.css
+++ b/front-end/src/components/AdminRegister/styles/AdminRegister.css
@@ -19,11 +19,10 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  max-width: 500px;
+  min-width: 340px;
   padding: 40px;
   position: sticky;
   top: 120px;
-  width: 40%;
 }
 
 ._admin_register h2 {
