--- a/front-end/src/components/AdminUsersTable/styles/AdminUsersTable.css
+++ b/front-end/src/components/AdminUsersTable/styles/AdminUsersTable.css
@@ -15,8 +15,9 @@
   animation: toLeft 1s;
   border-collapse: collapse;
   height: 100%;
-  max-width: 800px;
-  width: 60%;
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 ._admin_users_table th {
